// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component SingleAddress - test SingleAddress - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="none"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              stroke="#18bd18"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "marginRight": 10,
                  },
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4279811352,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              >
                <RNSVGPath
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "marginRight": 10,
                  "opacity": 0.9,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View>
          <mockQRCode />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                fill="none"
                focusable={false}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                stroke="#ffffff"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "margin": 3,
                    },
                    {
                      "flex": 0,
                      "height": 24,
                      "opacity": 0.9,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                >
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={14}
                    rx={2}
                    ry={2}
                    width={14}
                    x={8}
                    y={8}
                  />
                  <RNSVGPath
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "gap": 5,
            "justifyContent": "center",
            "marginBottom": 20,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#888888",
              "fontSize": 16,
            }
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 10,
              "color": "#ffffff",
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "monospace",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "opacity": 0.8,
                  "textAlign": "center",
                  "textTransform": "lowercase",
                }
              }
            >
              UA-orchard...1234567890
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginTop": 10,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 10,
              "borderWidth": 2,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                }
              }
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginVertical": 40,
              "paddingHorizontal": 10,
              "width": "70%",
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#888888"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "marginRight": 16,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4287137928,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="m6 9 6 6 6-6"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            fill="none"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#888888"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "marginRight": 16,
                },
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={24}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4287137928,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="m12.5 17-.5-1-.5 1h1z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
              <RNSVGPath
                d="M15 22a1 1 0 0 0 1-1v-1a2 2 0 0 0 1.56-3.25 8 8 0 1 0-11.12 0A2 2 0 0 0 8 20v1a1 1 0 0 0 1 1z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
              <RNSVGCircle
                cx={15}
                cy={12}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                r={1}
              />
              <RNSVGCircle
                cx={9}
                cy={12}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                r={1}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              {
                "color": "#888888",
                "fontSize": 16,
              }
            }
          >
             
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            fill="none"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#888888"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "marginLeft": 16,
                  "padding": 10,
                },
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={24}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4287137928,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGCircle
                cx={12}
                cy={11.9}
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                r={2}
              />
              <RNSVGPath
                d="M6.7 3.4c-.9 2.5 0 5.2 2.2 6.7C6.5 9 3.7 9.6 2 11.6M8.9 10.1l1.4.8M17.3 3.4c.9 2.5 0 5.2-2.2 6.7 2.4-1.2 5.2-.6 6.9 1.5M15.1 10.1l-1.4.8M16.7 20.8c-2.6-.4-4.6-2.6-4.7-5.3-.2 2.6-2.1 4.8-4.7 5.2M12 13.9v1.6M13.5 5.4c-1-.2-2-.2-3 0M17 16.4c.7-.7 1.2-1.6 1.5-2.5M5.5 13.9c.3.9.8 1.8 1.5 2.5"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="#888888"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "marginLeft": 16,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4287137928,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="m6 9 6 6 6-6"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component SingleAddress UFVK - test SingleAddress UFVK - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View>
          <mockQRCode />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                fill="none"
                focusable={false}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                stroke="#ffffff"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "margin": 3,
                    },
                    {
                      "flex": 0,
                      "height": 24,
                      "opacity": 0.9,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth={2}
                >
                  <RNSVGRect
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                    height={14}
                    rx={2}
                    ry={2}
                    width={14}
                    x={8}
                    y={8}
                  />
                  <RNSVGPath
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "gap": 5,
            "justifyContent": "center",
            "marginBottom": 20,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#888888",
              "fontSize": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginTop": 10,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderRadius": 10,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
